--- a/_sass/_user_vars.scss
+++ b/_sass/_user_vars.scss
@@ -1,10 +1,10 @@
-// theme #1
-$primary-color:  #0077CC;
-$accent-color: #f66733;
-$title-color: #522d80;
-$header-text-color: #fff;
-$header-color: #336699;
-$header-background-opacity: 0.5;
+// // theme #1
+// $primary-color:  #0077CC;
+// $accent-color: #f66733;
+// $title-color: #522d80;
+// $header-text-color: #fff;
+// $header-color: #336699;
+// $header-background-opacity: 0.5;
 
 // // theme #2
 // $primary-color:  #c3073f;
@@ -48,14 +48,14 @@ $header-background-opacity: 0.5;
 // $header-background-opacity: 0.5;
 // $header-background-invert: 0%;
 
-// // theme #7
-// $primary-color:  #994c5f;
-// $accent-color: #da7b93;
-// $title-color: #1c3334;
-// $header-color: #2f4454;
-// $header-text-color: #fff;
-// $header-background-opacity: 0.6;
-// $header-background-invert: 0%;
+// theme #7
+$primary-color:  #994c5f;
+$accent-color: #da7b93;
+$title-color: #1c3334;
+$header-color: #2f4454;
+$header-text-color: #fff;
+$header-background-opacity: 0.6;
+$header-background-invert: 0%;
 
 // // theme #8
 // $primary-color:  #668d8c;
